# api_product_review

./: pyproject.toml
api_reviews/: admin.py  apps.py  exaption.py  models.py  serializers.py  urls.py  utils.py  views.py
api_reviews/migrations/: 0001_initial.py  0002_alter_review_parent_alter_review_product.py  0003_alter_rating_product.py
core/: settings.py  urls.py
